* A number of potential problems reported by the "Findbugs" tool have been removed